Resolve Vert.x services at build time
Follow-up of discussions which led to:
https://github.com/eclipse-vertx/vert.x/pull/5951

(cherry picked from commit 5872f87fe4684f4c622d5bbdab601605c90d1729)